[gd_scene format=3 uid="uid://dvf3o7cawtyq0"]

[ext_resource type="Script" uid="uid://b5ecua1qxlsek" path="res://player/lesson_reference/player_3d_template.gd" id="1_eiqoa"]
[ext_resource type="PackedScene" uid="uid://prh35jb6tjtd" path="res://player/sophia_skin/sophia_skin.tscn" id="2_4en1s"]
[ext_resource type="Texture2D" uid="uid://b4yv7f6rd10jy" path="res://assets/kenney_particle/star_02.png" id="3_4i7us"]
[ext_resource type="AudioStream" uid="uid://bhoyegbjust84" path="res://player/sounds/robot_land.wav" id="3_6m184"]
[ext_resource type="AudioStream" uid="uid://b4x0f4pgfifoo" path="res://player/sounds/robot_jump.wav" id="4_4i7us"]
[ext_resource type="AudioStream" uid="uid://cbkmnl8qlr3aw" path="res://assets/audio/sfx/magic_glide.mp3" id="5_4en1s"]
[ext_resource type="Environment" uid="uid://cnavn10ijgbut" path="res://main_world_environment.tres" id="5_wg710"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e8pdu"]
radius = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wg710"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.79335445, 0.88982546, 0.8971473, 1)
albedo_texture = ExtResource("3_4i7us")

[sub_resource type="Curve" id="Curve_3t305"]
_data = [Vector2(0, 0.742241), 0.0, 0.0, 0, 0, Vector2(0.139952, 0.986755), 0.129787, 0.129787, 0, 0, Vector2(0.631579, 1), 0.0, 0.0, 0, 0, Vector2(0.785885, 0.873668), -1.98736, -1.98736, 0, 0, Vector2(1, 0.0148119), -5.26067, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_k61qt"]
width = 32
curve = SubResource("Curve_3t305")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p3ebs"]
lifetime_randomness = 0.33
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 0.1
initial_velocity_max = 0.35
gravity = Vector3(0, 1, -0.5)
tangential_accel_min = -1.6300021
tangential_accel_max = 2.2499976
scale_min = 0.8
scale_max = 1.2
scale_curve = SubResource("CurveTexture_k61qt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kpdwg"]
shading_mode = 0
diffuse_mode = 3
specular_mode = 1
disable_ambient_light = true
disable_fog = true
vertex_color_use_as_albedo = true
albedo_color = Color(0.5694906, 0.4805748, 0.9032035, 1)

[sub_resource type="SphereMesh" id="SphereMesh_vpbss"]
material = SubResource("StandardMaterial3D_kpdwg")
radius = 0.08
height = 0.16
radial_segments = 4
rings = 4

[sub_resource type="Curve" id="Curve_3f17x"]
_data = [Vector2(0, 0.742241), 0.0, 0.0, 0, 0, Vector2(0.139952, 0.986755), 0.129787, 0.129787, 0, 0, Vector2(0.631579, 1), 0.0, 0.0, 0, 0, Vector2(0.785885, 0.873668), -1.98736, -1.98736, 0, 0, Vector2(1, 0.0148119), -5.26067, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_8asvs"]
width = 32
curve = SubResource("Curve_3f17x")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tqdcj"]
lifetime_randomness = 0.33
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 0.1
initial_velocity_max = 0.35
gravity = Vector3(0, 0.5, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 0.199998
scale_min = 0.8
scale_max = 1.2
scale_curve = SubResource("CurveTexture_8asvs")

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_h1hkf"]
length = 0.5
slide_on_slope = true

[node name="Player" type="CharacterBody3D" unique_id=1826751568 groups=["Player"]]
collision_layer = 2
collision_mask = 3
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_eiqoa")
acceleration = 30.0
main_joy_sensitivity = 6.0
tilt_upper_limit = 0.831
tilt_lower_limit = -1.17
main_world_collision = 5
dark_world_collision = 240

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="." unique_id=1153825377]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0100212, 0)
shape = SubResource("CapsuleShape3D_e8pdu")

[node name="SophiaSkin" parent="." unique_id=1047926299 instance=ExtResource("2_4en1s")]
unique_name_in_owner = true
transform = Transform3D(0.99998003, 0, 0.00631805, 0, 1, 0, -0.00631805, 0, 0.99998003, 0, 0, 0)

[node name="GlideParticles" type="GPUParticles3D" parent="SophiaSkin" unique_id=1520173573]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00025557913, 1.3848305, -0.34141654)
material_override = SubResource("StandardMaterial3D_wg710")
cast_shadow = 0
gi_mode = 0
emitting = false
amount = 16
lifetime = 2.0
explosiveness = 0.05
randomness = 0.13
fixed_fps = 24
process_material = SubResource("ParticleProcessMaterial_p3ebs")
draw_pass_1 = SubResource("SphereMesh_vpbss")

[node name="DustParticles" type="GPUParticles3D" parent="SophiaSkin" unique_id=1146550532]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.136607, -0.190934)
cast_shadow = 0
gi_mode = 0
amount = 10
lifetime = 0.7
explosiveness = 0.05
process_material = SubResource("ParticleProcessMaterial_tqdcj")
draw_pass_1 = SubResource("SphereMesh_vpbss")

[node name="LandingSound" type="AudioStreamPlayer3D" parent="." unique_id=1448530687]
unique_name_in_owner = true
stream = ExtResource("3_6m184")
volume_db = 1.0

[node name="JumpSound" type="AudioStreamPlayer3D" parent="." unique_id=375322991]
unique_name_in_owner = true
stream = ExtResource("4_4i7us")
volume_db = 1.0

[node name="GlideSound" type="AudioStreamPlayer3D" parent="." unique_id=517695904]
unique_name_in_owner = true
stream = ExtResource("5_4en1s")
attenuation_model = 3
volume_db = -2.0
bus = &"SFX"

[node name="CameraPivot" type="Node3D" parent="." unique_id=1100139801]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09401, 0)

[node name="SpringArm" type="SpringArm3D" parent="CameraPivot" unique_id=760809364]
unique_name_in_owner = true
transform = Transform3D(-1, 2.1052e-08, -1.40279e-07, -3.23484e-08, 0.929023, 0.370022, 1.38112e-07, 0.370022, -0.929023, 0, 0.34, 0)
shape = SubResource("SeparationRayShape3D_h1hkf")
spring_length = 5.0

[node name="MainCamera3D" type="Camera3D" parent="CameraPivot/SpringArm" unique_id=114910413]
unique_name_in_owner = true
transform = Transform3D(1, 3.19744e-14, 2.13163e-14, 0, 1, 0, 0, 0, 1, 0, 0, 5)
cull_mask = 16385
environment = ExtResource("5_wg710")
current = true
fov = 50.0

[node name="StrangeThingRay" type="RayCast3D" parent="CameraPivot/SpringArm/MainCamera3D" unique_id=2109232356]
unique_name_in_owner = true
transform = Transform3D(1, 7.1054274e-14, 1.4210855e-13, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
visible = false
target_position = Vector3(0, -70, 0)
collision_mask = 4
debug_shape_custom_color = Color(0.775592, 0.6025461, 0.8443346, 1)
debug_shape_thickness = 5

[node name="SpotLight3D" type="SpotLight3D" parent="CameraPivot/SpringArm/MainCamera3D" unique_id=1360744126]
transform = Transform3D(-1, 3.2348396e-08, -1.38112e-07, 2.1052067e-08, -0.9290231, -0.3700219, -1.4027884e-07, -0.3700219, 0.9290231, 6.564747e-08, 0.5529964, -5.3849926)
visible = false
light_color = Color(0.9412317, 0.7378981, 0.64479196, 1)
light_energy = 5.0
spot_angle = 17.01
